# cleanup_music_folder_files

./: .gitignore  CHANGELOG.md  README.md  cleanup_music_folder_files.py  config.toml  pyproject.toml
docs/: config_example.toml
